# eccomerce-analitica

./: .env  .env.local  .env.render  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
analitic/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
analitic/tests/: test_integration.py  test_models.py
config/: settings.py  urls.py
uv/: pyvenv.cfg
uv/Scripts/: activate  activate.bat
